Fixing readability and cookie logic.

--- a/www/static/css-src/main.scss
+++ b/www/static/css-src/main.scss
@@ -136,38 +136,44 @@ code.prettyprint {
 }
 
 /*----- Updates Banner -----*/
-.updates-banner {
-  background-color: #FFCC00;
-  color: #1E1E1E;
-  font-size: 16px;
-  position: relative;}
+.survey-banner {
+    background-color: #FFCC00;
+    color: #1E1E1E;
+    font-size: 16px;
+    position: relative;
+}
 
-.updates-banner .container p {
-  margin: 10px 0;
-  padding-right: 42px; }
+.survey-banner .container p {
+    margin: 10px 0;
+    padding-right: 42px;
+}
 
-.updates-banner .dismiss-btn {
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 100%;
-  width: 42px;
-  cursor: pointer; }
+.survey-banner .dismiss-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 42px;
+    cursor: pointer;
+}
 
-.updates-banner .dismiss-btn {
-  opacity: 0.5;
-  cursor: pointer; }
+.survey-banner .dismiss-btn {
+    opacity: 0.5;
+    cursor: pointer;
+}
 
-.updates-banner .dismiss-btn:hover {
-  opacity: 1; }
+.survey-banner .dismiss-btn:hover {
+    opacity: 1;
+}
 
-.updates-banner .dismiss-btn:after {
-  content: "\00d7";
-  font-size: 24px;
-  font-weight: bold;
-  display: block;
-  margin-left: 10px;
-  margin-top: 2px; }
+.survey-banner .dismiss-btn:after {
+    content: "\00d7";
+    font-size: 24px;
+    font-weight: bold;
+    display: block;
+    margin-left: 10px;
+    margin-top: 2px;
+}
 
 @import 'home';
 @import 'blog';
